--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/core": "^0.40.0",
     "@hookform/resolvers": "^3.9.1",
     "@metamask/sdk": "^0.33.0",
     "@metamask/sdk-react": "^0.33.0",
@@ -40,6 +41,9 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@selfxyz/core": "^1.0.7-beta.1",
+    "@selfxyz/qrcode": "^1.0.10-beta.1",
+    "asn1js": "^3.0.6",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,6 +54,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
