--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "thirdweb": "^5.105.22",
     "vaul": "^0.9.6",
     "viem": "latest",
     "zod": "^3.24.1"
