--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "oracle:push": "node scripts/oracle-push.cjs",
+    "oracle:read": "node scripts/oracle-read.cjs"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
@@ -72,7 +74,11 @@
     "thirdweb": "^5.0.0",
     "vaul": "^0.9.6",
     "viem": "latest",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@mento-protocol/mento-sdk": "1.0.7",
+    "@types/node": "^18.14.6",
+    "ts-node": "^10.9.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^22",
