--- a/.github/workflows/oracle-ping.yml
+++ b/.github/workflows/oracle-ping.yml
@@ -19,7 +19,7 @@ jobs:
             exit 1
           fi
           curl -fsS -X GET \
-            -H "x-vercel-cron: 1" \
+            -H "x-github-workflow: 1" \
             "$VERCEL_URL/api/cron/push-prices"
 
 
