--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mento-protocol/mento-sdk": "1.0.7",
     "@metamask/sdk": "^0.33.0",
     "@metamask/sdk-react": "^0.33.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -52,6 +53,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
     "ethers": "^5.8.0",
     "geist": "^1.3.1",
@@ -71,14 +73,11 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "thirdweb": "^5.0.0",
+    "thirdweb": "^5.105.35",
+    "ts-node": "^10.9.1",
     "vaul": "^0.9.6",
     "viem": "latest",
-    "zod": "^3.24.1",
-    "@mento-protocol/mento-sdk": "1.0.7",
-    "@types/node": "^18.14.6",
-    "ts-node": "^10.9.1",
-    "dotenv": "^16.4.5"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
