--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
+    "@neynar/react": "latest",
+    "@neynar/nodejs-sdk": "^2.0.5",
     "@hookform/resolvers": "^3.9.1",
     "@mento-protocol/mento-sdk": "1.0.7",
     "@metamask/sdk": "^0.33.0",
@@ -77,6 +79,7 @@
     "ts-node": "^10.9.1",
     "vaul": "^0.9.6",
     "viem": "latest",
+    "wagmi": "^2.16.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
