refactor: enhance wallet connection and verification flow
- Updated middleware to differentiate between wallet connection and transaction verification routes.
- Made verification optional for a smoother user experience across the application.
- Refactored HomePage and DashboardPage to streamline session handling and improve user prompts.
- Added new AppInfo component to provide users with key information about the application.
- Integrated Divvi referral tracking in relevant transaction modals for enhanced user engagement.
- Updated package dependencies and added new files to .gitignore for better project management.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 MINILEND_WHITEPAPER.txt
+THIRDWEB_INTEGRATION_SUMMARY.md
+THIRDWEB_MIGRATION.md
+minilend-thirdweb.txt
+thirdweb-api.json
+thirdweb-api.yaml
+ROADMAP.md
