--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
-    "@neynar/react": "latest",
-    "@neynar/nodejs-sdk": "^2.0.5",
+    "@divvi/referral-sdk": "^2.3.0",
     "@hookform/resolvers": "^3.9.1",
     "@mento-protocol/mento-sdk": "1.0.7",
     "@metamask/sdk": "^0.33.0",
     "@metamask/sdk-react": "^0.33.0",
+    "@neynar/nodejs-sdk": "^2.0.5",
+    "@neynar/react": "latest",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
