--- a/package.json
+++ b/package.json
@@ -90,5 +90,8 @@
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "overrides": {
+    "error-ex": "1.3.2"
   }
 }
