--- a/pay/package.json
+++ b/pay/package.json
@@ -11,8 +11,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1",
-    "viem": "^2.0.0"
+    "lucide-react": "^0.263.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
