--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "minilend",
   "version": "0.1.0",
   "private": true,
+
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "start": "next start",
     "oracle:push": "node scripts/oracle-push.cjs",
