--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "minilend",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
@@ -66,6 +65,7 @@
     "@selfxyz/core": "^1.0.7-beta.1",
     "@selfxyz/qrcode": "^1.0.10-beta.1",
     "@tanstack/react-query": "^4.36.1",
+    "@vercel/analytics": "^1.5.0",
     "asn1js": "^3.0.6",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
