--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
     "oracle:push": "node scripts/oracle-push.cjs",
@@ -34,6 +34,7 @@
     "@metamask/sdk-react": "^0.33.0",
     "@neynar/nodejs-sdk": "^2.0.5",
     "@neynar/react": "latest",
+    "@pigment-css/react": "^0.0.30",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -62,8 +63,10 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@selfxyz/core": "^1.0.7-beta.1",
-    "@selfxyz/qrcode": "^1.0.10-beta.1",
+    "@selfxyz/common": "^0.0.8",
+    "@selfxyz/contracts": "^1.2.3",
+    "@selfxyz/core": "^0.0.25",
+    "@selfxyz/qrcode": "^1.0.15",
     "@tanstack/react-query": "^4.36.1",
     "@vercel/analytics": "^1.5.0",
     "asn1js": "^3.0.6",
@@ -71,7 +74,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
     "ethers": "^5.8.0",
@@ -84,6 +87,7 @@
     "next-themes": "^0.4.4",
     "pino-pretty": "^13.1.1",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
@@ -110,5 +114,6 @@
   },
   "overrides": {
     "error-ex": "1.3.2"
-  }
+  },
+  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
