Improves identity verification UX and refines dependencies
Enhances user flow for identity verification by prompting wallet connection and adding feedback for verification states. Improves error handling to show clear messages and prevents duplicate verification requests. Updates dependencies by removing unused styling packages and integrating anon-aadhaar core. Refactors contract deployment imports for better clarity and maintainability.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pwa:test": "pnpm build && pnpm start"
   },
   "dependencies": {
+    "@anon-aadhaar/core": "https://gitpkg.vercel.app/selfxyz/anon-aadhaar/packages/core?1b9efa501cff3cf25dc260b060bf611229e316a4",
     "@auth/core": "^0.40.0",
     "@divvi/referral-sdk": "^2.3.0",
     "@hookform/resolvers": "^3.9.1",
