--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
     "ethers": "^5.8.0",
+    "framer-motion": "^12.26.2",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
