--- a/package.json
+++ b/package.json
@@ -108,6 +108,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.2",
     "postcss": "^8.5",
     "sharp": "^0.34.4",
     "tailwindcss": "^3.4.17",
