--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@divvi/referral-sdk": "^2.3.0",
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@hookform/resolvers": "^3.9.1",
     "@mento-protocol/mento-sdk": "1.0.7",
     "@metamask/sdk": "^0.33.0",
@@ -83,7 +84,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.18.0",
-    "next": "15.2.6",
+    "next": "14.2.35",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "pino-pretty": "^13.1.1",
